# Engine3D

./: CMakeLists.txt  README.md  config.json  imgui.ini  vcpkg.json
assets/shaders/: main.frag  main.vert
include/: Audio.h  Camera.h  Config.h  Mesh.h  Model.h  Performance.h  Shader.h  Texture.h
src/: Camera.cpp  Mesh.cpp  Model.cpp  Performance.cpp  Shader.cpp  Texture.cpp  main.cpp  miniaudio.cpp  stb_image.cpp
